Feat: Implementation of Refresh Token feature
